remove applet support